@@ -10,7 +10,7 @@ import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
-import ru.practicum.saga.SagaOrchestrator;
+import org.springframework.web.client.RestTemplate;
 import ru.practicum.user.dto.NewUserRequest;
 import ru.practicum.user.dto.UserDto;
 import ru.practicum.user.exception.ConflictException;
@@ -19,6 +19,7 @@ import ru.practicum.user.mapper.UserMapper;
 import ru.practicum.user.model.User;
 import ru.practicum.user.repository.UserRepository;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
@@ -36,13 +37,10 @@ class UserServiceTest {
     private UserMapper userMapper;
 
     @Mock
-    private SagaOrchestrator sagaOrchestrator;
-
-    @Mock
-    private AuthServiceClient authServiceClient;
+    private RestTemplate restTemplate;
 
     @InjectMocks
-    private UserServiceSagaImpl userService;
+    private UserServiceImpl userService;
 
     private NewUserRequest newUserRequest;
     private User user;
@@ -66,98 +64,139 @@ class UserServiceTest {
     }
 
     @Test
+    void createUser_ShouldReturnUserDto() {
+        when(userRepository.findByEmail(anyString())).thenReturn(Optional.empty());
+        when(userMapper.mapToUser(any(NewUserRequest.class))).thenReturn(user);
+        when(userRepository.save(any(User.class))).thenReturn(user);
+        when(userMapper.mapToUserDto(any(User.class))).thenReturn(userDto);
+
+        UserDto result = userService.createUser(newUserRequest);
+
+        assertNotNull(result);
+        assertEquals("test@example.com", result.getEmail());
+        assertEquals("Test User", result.getName());
+        verify(userRepository).save(any(User.class));
+    }
+
+    @Test
     void createUser_EmailAlreadyExists_ThrowsConflictException() {
-        // Arrange
         when(userRepository.findByEmail(anyString())).thenReturn(Optional.of(user));
 
-        // Act & Assert
         assertThrows(ConflictException.class, () -> userService.createUser(newUserRequest));
         verify(userRepository, never()).save(any(User.class));
     }
 
     @Test
-    void getUserById_Success() {
-        // Arrange
+    void getUserById_ShouldReturnUserDto() {
         when(userRepository.findById(1L)).thenReturn(Optional.of(user));
         when(userMapper.mapToUserDto(any(User.class))).thenReturn(userDto);
 
-        // Act
         UserDto result = userService.getUserById(1L);
 
-        // Assert
         assertNotNull(result);
         assertEquals(1L, result.getId());
         assertEquals("test@example.com", result.getEmail());
-        assertEquals("Test User", result.getName());
     }
 
     @Test
     void getUserById_NotFound_ThrowsNotFoundException() {
-        // Arrange
-        when(userRepository.findById(1L)).thenReturn(Optional.empty());
+        when(userRepository.findById(999L)).thenReturn(Optional.empty());
 
-        // Act & Assert
-        assertThrows(NotFoundException.class, () -> userService.getUserById(1L));
+        assertThrows(NotFoundException.class, () -> userService.getUserById(999L));
     }
 
     @Test
-    void deleteUser_Success() {
-        // Arrange
+    void deleteUser_ShouldDelete() {
         when(userRepository.existsById(1L)).thenReturn(true);
-        doNothing().when(userRepository).deleteById(1L);
-        doNothing().when(authServiceClient).deleteUserCredentials(1L);
 
-        // Act
         userService.deleteUser(1L);
 
-        // Assert
         verify(userRepository).deleteById(1L);
-        verify(authServiceClient).deleteUserCredentials(1L);
     }
 
     @Test
     void deleteUser_NotFound_ThrowsNotFoundException() {
-        // Arrange
-        when(userRepository.existsById(1L)).thenReturn(false);
+        when(userRepository.existsById(999L)).thenReturn(false);
 
-        // Act & Assert
-        assertThrows(NotFoundException.class, () -> userService.deleteUser(1L));
+        assertThrows(NotFoundException.class, () -> userService.deleteUser(999L));
     }
 
     @Test
-    void getUsersByIdsList_Success() {
-        // Arrange
-        List<Long> ids = List.of(1L, 2L);
-        List<User> users = List.of(user);
-        when(userRepository.findAllById(ids)).thenReturn(users);
+    void getAllUsers_ShouldReturnPage() {
+        Pageable pageable = PageRequest.of(0, 10);
+        Page<User> page = new PageImpl<>(List.of(user));
+
+        when(userRepository.findAll(pageable)).thenReturn(page);
         when(userMapper.mapToUserDto(any(User.class))).thenReturn(userDto);
 
-        // Act
+        Page<UserDto> result = userService.getAllUsers(pageable);
+
+        assertNotNull(result);
+        assertEquals(1, result.getContent().size());
+        assertEquals("test@example.com", result.getContent().get(0).getEmail());
+    }
+
+    @Test
+    void getUsersByIds_ShouldReturnPage() {
+        List<Long> ids = List.of(1L, 2L);
+        Pageable pageable = PageRequest.of(0, 10);
+        Page<User> page = new PageImpl<>(List.of(user));
+
+        when(userRepository.findByIdIn(ids, pageable)).thenReturn(page);
+        when(userMapper.mapToUserDto(any(User.class))).thenReturn(userDto);
+
+        Page<UserDto> result = userService.getUsersByIds(ids, pageable);
+
+        assertNotNull(result);
+        assertEquals(1, result.getContent().size());
+    }
+
+    @Test
+    void getUsersByIds_WithNullIds_ShouldReturnAll() {
+        Pageable pageable = PageRequest.of(0, 10);
+        Page<User> page = new PageImpl<>(List.of(user));
+
+        when(userRepository.findAll(pageable)).thenReturn(page);
+        when(userMapper.mapToUserDto(any(User.class))).thenReturn(userDto);
+
+        Page<UserDto> result = userService.getUsersByIds(null, pageable);
+
+        assertNotNull(result);
+        assertEquals(1, result.getContent().size());
+    }
+
+    @Test
+    void getUsersByIds_WithEmptyIds_ShouldReturnAll() {
+        Pageable pageable = PageRequest.of(0, 10);
+        Page<User> page = new PageImpl<>(List.of(user));
+
+        when(userRepository.findAll(pageable)).thenReturn(page);
+        when(userMapper.mapToUserDto(any(User.class))).thenReturn(userDto);
+
+        Page<UserDto> result = userService.getUsersByIds(Collections.emptyList(), pageable);
+
+        assertNotNull(result);
+        assertEquals(1, result.getContent().size());
+        verify(userRepository).findAll(pageable);
+    }
+
+    @Test
+    void getUsersByIdsList_ShouldReturnList() {
+        List<Long> ids = List.of(1L, 2L);
+        when(userRepository.findAllById(ids)).thenReturn(List.of(user));
+        when(userMapper.mapToUserDto(any(User.class))).thenReturn(userDto);
+
         List<UserDto> result = userService.getUsersByIdsList(ids);
 
-        // Assert
         assertNotNull(result);
         assertEquals(1, result.size());
-        assertEquals("test@example.com", result.get(0).getEmail());
+        verify(userRepository).findAllById(ids);
     }
 
     @Test
-    void getUsersByIdsList_EmptyList() {
+    void getUsersByIdsList_EmptyList_ShouldReturnEmpty() {
         // Act
-        List<UserDto> result = userService.getUsersByIdsList(null);
-
-        // Assert
-        assertNotNull(result);
-        assertTrue(result.isEmpty());
-    }
-
-    @Test
-    void getUsersByIdsList_WithEmptyList() {
-        // Arrange
-        List<Long> ids = List.of();
-
-        // Act
-        List<UserDto> result = userService.getUsersByIdsList(ids);
+        List<UserDto> result = userService.getUsersByIdsList(Collections.emptyList());
 
         // Assert
         assertNotNull(result);
@@ -166,55 +205,34 @@ class UserServiceTest {
     }
 
     @Test
-    void getAllUsers_Success() {
-        // Arrange
-        Pageable pageable = PageRequest.of(0, 10);
-        Page<User> page = new PageImpl<>(List.of(user));
-        when(userRepository.findAll(pageable)).thenReturn(page);
-        when(userMapper.mapToUserDto(any(User.class))).thenReturn(userDto);
-
+    void getUsersByIdsList_NullList_ShouldReturnEmpty() {
         // Act
-        Page<UserDto> result = userService.getAllUsers(pageable);
+        List<UserDto> result = userService.getUsersByIdsList(null);
 
         // Assert
         assertNotNull(result);
-        assertEquals(1, result.getContent().size());
-        assertEquals("test@example.com", result.getContent().get(0).getEmail());
+        assertTrue(result.isEmpty());
+        verify(userRepository, never()).findAllById(any());
     }
 
     @Test
-    void getUsersByIds_WithIds_Success() {
-        // Arrange
-        List<Long> ids = List.of(1L, 2L);
-        Pageable pageable = PageRequest.of(0, 10);
-        Page<User> page = new PageImpl<>(List.of(user));
-        when(userRepository.findByIdIn(ids, pageable)).thenReturn(page);
+    void createUser_WithAuthServiceFailure_ShouldStillCreateUser() {
+        // Arrange - когда auth-service недоступен
+        when(userRepository.findByEmail(anyString())).thenReturn(Optional.empty());
+        when(userMapper.mapToUser(any(NewUserRequest.class))).thenReturn(user);
+        when(userRepository.save(any(User.class))).thenReturn(user);
         when(userMapper.mapToUserDto(any(User.class))).thenReturn(userDto);
 
+        // Мокаем ошибку при вызове auth-service
+        doThrow(new RuntimeException("Auth service unavailable"))
+                .when(restTemplate).postForEntity(anyString(), any(), eq(Void.class));
+
         // Act
-        Page<UserDto> result = userService.getUsersByIds(ids, pageable);
+        UserDto result = userService.createUser(newUserRequest);
 
         // Assert
         assertNotNull(result);
-        assertEquals(1, result.getContent().size());
-        assertEquals("test@example.com", result.getContent().get(0).getEmail());
-    }
-
-    @Test
-    void getUsersByIds_WithoutIds_Success() {
-        // Arrange
-        List<Long> ids = null;
-        Pageable pageable = PageRequest.of(0, 10);
-        Page<User> page = new PageImpl<>(List.of(user));
-        when(userRepository.findAll(pageable)).thenReturn(page);
-        when(userMapper.mapToUserDto(any(User.class))).thenReturn(userDto);
-
-        // Act
-        Page<UserDto> result = userService.getUsersByIds(ids, pageable);
-
-        // Assert
-        assertNotNull(result);
-        assertEquals(1, result.getContent().size());
-        assertEquals("test@example.com", result.getContent().get(0).getEmail());
+        assertEquals("test@example.com", result.getEmail());
+        verify(userRepository).save(any(User.class));
     }
 }
